--- a/test.html
+++ b/test.html
@@ -3,45 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bienvenue sur JS CALL</title>
+  <title>JS CALL - Accueil</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: linear-gradient(135deg, #1e90ff, #00bfff);
-      color: white;
-      text-align: center;
-      height: 100vh;
+      background-color: #f9f9f9;
       display: flex;
       flex-direction: column;
       justify-content: center;
-      margin: 0;
+      align-items: center;
+      height: 100vh;
+      font-family: Arial, sans-serif;
+    }
+    img {
+      width: 200px;
+      height: auto;
+      margin-bottom: 20px;
     }
     h1 {
-      font-size: 3em;
-      margin-bottom: 0.2em;
-    }
-    p {
-      font-size: 1.2em;
-    }
-    .btn {
-      margin-top: 20px;
-      padding: 12px 25px;
-      background: white;
-      color: #0078ff;
-      border: none;
-      border-radius: 25px;
-      cursor: pointer;
-      font-size: 1em;
-      transition: all 0.3s;
-    }
-    .btn:hover {
-      background: #f0f0f0;
+      color: #0a2240;
     }
   </style>
 </head>
 <body>
-  <h1>Bienvenue sur JS CALL</h1>
-  <p>Centre d'appel professionnel à Rabat</p>
-  <button class="btn" onclick="window.location.href='mailto:contact@jscall.ma'">Nous contacter</button>
+  <img src="Frame-12.png" alt="Logo JS CALL">
+  <h1>Bienvenue chez JS CALL</h1>
+  <p>Centre d'appel professionnel basé à Rabat</p>
 </body>
 </html>
